[package]
name = "robu"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for creating GUI projects in Robius"
authors = ["cork"]
keywords = ["Robius", "Makepad", "cli"]
license = "MIT"


[dependencies]
anyhow = "1.0.96"
cargo-generate = "0.22.1"
clap = { version = "4.5.30", features = ["derive"] }
console = "0.15.10"
dialoguer = "0.11.0"
figlet-rs = "0.1.5"
indicatif = "0.17.11"
